@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2010-2018 JPEXS, Miron Sadziak, All rights reserved.
+ *  Copyright (C) 2010-2025 JPEXS, Miron Sadziak, All rights reserved.
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -12,7 +12,8 @@
  * Lesser General Public License for more details.
  * 
  * You should have received a copy of the GNU Lesser General Public
- * License along with this library. */
+ * License along with this library.
+ */
 package com.jpexs.decompiler.flash.helpers;
 
 import com.jpexs.decompiler.flash.SWF;
@@ -28,6 +29,7 @@ import com.jpexs.helpers.plugin.CharSequenceJavaFileObject;
 import com.jpexs.helpers.plugin.ClassFileManager;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -42,6 +44,7 @@ import javax.tools.JavaFileObject;
 import javax.tools.ToolProvider;
 
 /**
+ * SWF decompiler plugin.
  *
  * @author JPEXS
  */
@@ -53,6 +56,10 @@ public class SWFDecompilerPlugin {
 
     public static String[] customParameters = new String[0];
 
+    /**
+     * Get plugins directory.
+     * @return Plugins directory
+     */
     public static File getPluginsDir() {
         File pluginPath = null;
 
@@ -73,6 +80,9 @@ public class SWFDecompilerPlugin {
         return pluginPath;
     }
 
+    /**
+     * Load plugins
+     */
     public static void loadPlugins() {
         File pluginPath = getPluginsDir();
         if (pluginPath != null && pluginPath.exists()) {
@@ -88,6 +98,10 @@ public class SWFDecompilerPlugin {
 
     }
 
+    /**
+     * Load plugin from path.
+     * @param path Path to plugin
+     */
     public static void loadPlugin(String path) {
         if (".class".equals(Path.getExtension(path))) {
             loadPluginCompiled(path);
@@ -111,12 +125,13 @@ public class SWFDecompilerPlugin {
             String pluginName = Path.getFileNameWithoutExtension(pluginFile);
             Class<?> cls = cl.loadClass(pluginName);
             if (SWFDecompilerListener.class.isAssignableFrom(cls)) {
-                SWFDecompilerListener listener = (SWFDecompilerListener) cls.newInstance();
+                SWFDecompilerListener listener = (SWFDecompilerListener) cls.getDeclaredConstructor().newInstance();
                 listeners.add(listener);
             }
 
             System.out.println("Plugin loaded: " + pluginName);
-        } catch (MalformedURLException | ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+        } catch (MalformedURLException | ClassNotFoundException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
             logger.log(Level.SEVERE, null, ex);
         }
     }
@@ -159,13 +174,24 @@ public class SWFDecompilerPlugin {
 
         // Creating an instance of our compiled class and
         try {
-            listeners.add((SWFDecompilerListener) fileManager.getClassLoader(null).loadClass(fullName).newInstance());
+            listeners.add((SWFDecompilerListener) fileManager.getClassLoader(null).loadClass(fullName).getDeclaredConstructor().newInstance());
             System.out.println("Plugin loaded: " + fullName);
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+        } catch (ClassNotFoundException
+                | InstantiationException
+                | IllegalAccessException
+                | NoSuchMethodException
+                | SecurityException
+                | IllegalArgumentException
+                | InvocationTargetException ex) {
             logger.log(Level.SEVERE, null, ex);
         }
     }
 
+    /**
+     * Fire plugin method proxyFileCatched.
+     * @param data Data
+     * @return Result
+     */
     public static byte[] fireProxyFileCatched(byte[] data) {
         byte[] result = null;
         for (SWFDecompilerListener listener : listeners) {
@@ -184,6 +210,11 @@ public class SWFDecompilerPlugin {
         return result;
     }
 
+    /**
+     * Fire plugin method swfParsed.
+     * @param swf SWF
+     * @return Result
+     */
     public static boolean fireSwfParsed(SWF swf) {
         for (SWFDecompilerListener listener : listeners) {
             try {
@@ -197,6 +228,13 @@ public class SWFDecompilerPlugin {
         return !listeners.isEmpty();
     }
 
+    /**
+     * Fire plugin method actionListParsed.
+     * @param actions Action list
+     * @param swf SWF
+     * @return Result
+     * @throws InterruptedException On interrupt
+     */
     public static boolean fireActionListParsed(ActionList actions, SWF swf) throws InterruptedException {
         for (SWFDecompilerListener listener : listeners) {
             try {
@@ -210,6 +248,13 @@ public class SWFDecompilerPlugin {
         return !listeners.isEmpty();
     }
 
+    /**
+     * Fire plugin method actionTreeCreated.
+     * @param tree Tree
+     * @param swf SWF
+     * @return Result
+     * @throws InterruptedException On interrupt
+     */
     public static boolean fireActionTreeCreated(List<GraphTargetItem> tree, SWF swf) throws InterruptedException {
         for (SWFDecompilerListener listener : listeners) {
             try {
@@ -223,6 +268,12 @@ public class SWFDecompilerPlugin {
         return !listeners.isEmpty();
     }
 
+    /**
+     * Fire plugin method abcParsed.
+     * @param abc ABC
+     * @param swf SWF
+     * @return Result
+     */
     public static boolean fireAbcParsed(ABC abc, SWF swf) {
         for (SWFDecompilerListener listener : listeners) {
             try {
@@ -236,6 +287,13 @@ public class SWFDecompilerPlugin {
         return !listeners.isEmpty();
     }
 
+    /**
+     * Fire plugin method methodBodyParsed.
+     * @param abc ABC
+     * @param body Method body
+     * @param swf SWF
+     * @return Result
+     */
     public static boolean fireMethodBodyParsed(ABC abc, MethodBody body, SWF swf) {
         for (SWFDecompilerListener listener : listeners) {
             try {
@@ -249,6 +307,19 @@ public class SWFDecompilerPlugin {
         return !listeners.isEmpty();
     }
 
+    /**
+     * Fire plugin method avm2CodeRemoveTraps.
+     * @param path Path
+     * @param classIndex Class index
+     * @param isStatic Is static
+     * @param scriptIndex Script index
+     * @param abc ABC
+     * @param trait Trait
+     * @param methodInfo Method info
+     * @param body Method body
+     * @return Result
+     * @throws InterruptedException On interrupt
+     */
     public static boolean fireAvm2CodeRemoveTraps(String path, int classIndex, boolean isStatic, int scriptIndex, ABC abc, Trait trait, int methodInfo, MethodBody body) throws InterruptedException {
         for (SWFDecompilerListener listener : listeners) {
             try {
