@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2010-2018 JPEXS
+ *  Copyright (C) 2010-2025 JPEXS
  * 
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -19,28 +19,36 @@ package com.jpexs.decompiler.flash.gui.helpers;
 import com.jpexs.decompiler.flash.gui.AboutDialog;
 import com.jpexs.decompiler.flash.gui.AdvancedSettingsDialog;
 import com.jpexs.decompiler.flash.gui.AppStrings;
+import com.jpexs.decompiler.flash.gui.AsLinkageDialog;
 import com.jpexs.decompiler.flash.gui.DebugLogDialog;
 import com.jpexs.decompiler.flash.gui.ErrorLogFrame;
 import com.jpexs.decompiler.flash.gui.ExportDialog;
+import com.jpexs.decompiler.flash.gui.FilesChangedDialog;
 import com.jpexs.decompiler.flash.gui.FontEmbedDialog;
 import com.jpexs.decompiler.flash.gui.FontPreviewDialog;
 import com.jpexs.decompiler.flash.gui.GraphDialog;
-import com.jpexs.decompiler.flash.gui.LoadFromCacheFrame;
 import com.jpexs.decompiler.flash.gui.LoadFromMemoryFrame;
 import com.jpexs.decompiler.flash.gui.LoadingDialog;
 import com.jpexs.decompiler.flash.gui.MainFrame;
-import com.jpexs.decompiler.flash.gui.ModeFrame;
+import com.jpexs.decompiler.flash.gui.NewFileDialog;
 import com.jpexs.decompiler.flash.gui.NewVersionDialog;
+import com.jpexs.decompiler.flash.gui.PathResolvingDialog;
 import com.jpexs.decompiler.flash.gui.RenameDialog;
 import com.jpexs.decompiler.flash.gui.ReplaceCharacterDialog;
 import com.jpexs.decompiler.flash.gui.ReplaceTraceDialog;
 import com.jpexs.decompiler.flash.gui.SearchDialog;
 import com.jpexs.decompiler.flash.gui.SearchResultsDialog;
+import com.jpexs.decompiler.flash.gui.SelectFramePositionDialog;
 import com.jpexs.decompiler.flash.gui.SelectLanguageDialog;
+import com.jpexs.decompiler.flash.gui.SelectTagOfTypeDialog;
+import com.jpexs.decompiler.flash.gui.SelectTagPositionDialog;
+import com.jpexs.decompiler.flash.gui.abc.ABCExplorerDialog;
+import com.jpexs.decompiler.flash.gui.abc.AddClassDialog;
+import com.jpexs.decompiler.flash.gui.abc.As3ClassLinkageDialog;
 import com.jpexs.decompiler.flash.gui.abc.DeobfuscationDialog;
 import com.jpexs.decompiler.flash.gui.abc.NewTraitDialog;
 import com.jpexs.decompiler.flash.gui.abc.UsageFrame;
-import com.jpexs.decompiler.flash.gui.proxy.ProxyFrame;
+import com.jpexs.decompiler.flash.gui.action.AddScriptDialog;
 import com.jpexs.helpers.Helper;
 import java.io.BufferedReader;
 import java.io.FileNotFoundException;
@@ -49,6 +57,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.text.ParseException;
@@ -69,7 +78,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- *
  * @author JPEXS
  */
 public class CheckResources {
@@ -124,7 +132,7 @@ public class CheckResources {
                             }
 
                             if (firstMissing2) {
-                                stream.println(clazz.getSimpleName());
+                                stream.println(clazz.getSimpleName() + ":");
                                 firstMissing2 = false;
                             }
 
@@ -189,14 +197,15 @@ public class CheckResources {
             try {
                 String resPath = "/src" + getResourcePath(clazz, null);
                 URLConnection uc;
-                URL latestUrl = new URL(rootUrl + (revision2 == null ? "master" : revision2) + resPath);
-                URL prevUrl = new URL(rootUrl + revision + resPath);
+                URL latestUrl = URI.create(rootUrl + (revision2 == null ? "master" : revision2) + resPath).toURL();
+                URL prevUrl = URI.create(rootUrl + revision + resPath).toURL();
 
                 Properties latestProp = new LinkedProperties();
                 try {
                     uc = latestUrl.openConnection();
                     latestProp.load(new BufferedReader(new InputStreamReader(uc.getInputStream())));
                 } catch (IOException ex) {
+                    //ignored
                 }
 
                 Properties prevProp = new LinkedProperties();
@@ -204,6 +213,7 @@ public class CheckResources {
                     uc = prevUrl.openConnection();
                     prevProp.load(new BufferedReader(new InputStreamReader(uc.getInputStream())));
                 } catch (IOException ex) {
+                    //ignored
                 }
 
                 boolean firstMissing2 = true;
@@ -242,31 +252,40 @@ public class CheckResources {
         Class[] classes = new Class[]{
             AboutDialog.class,
             AdvancedSettingsDialog.class,
+            AsLinkageDialog.class,
             DebugLogDialog.class,
             ErrorLogFrame.class,
             ExportDialog.class,
+            FilesChangedDialog.class,
             FontEmbedDialog.class,
             FontPreviewDialog.class,
             GraphDialog.class,
             // GraphTreeFrame.class, // empty
-            LoadFromCacheFrame.class,
             LoadFromMemoryFrame.class,
             LoadingDialog.class,
             MainFrame.class,
-            ModeFrame.class,
+            NewFileDialog.class,
             NewVersionDialog.class,
+            PathResolvingDialog.class,
             RenameDialog.class,
             ReplaceCharacterDialog.class,
             ReplaceTraceDialog.class,
             SearchDialog.class,
             SearchResultsDialog.class,
+            SelectFramePositionDialog.class,
             SelectLanguageDialog.class,
+            SelectTagOfTypeDialog.class,
+            SelectTagPositionDialog.class,
             // ABC
+            ABCExplorerDialog.class,
+            AddClassDialog.class,
+            As3ClassLinkageDialog.class,
             DeobfuscationDialog.class,
             NewTraitDialog.class,
             UsageFrame.class,
-            // Proxy
-            ProxyFrame.class,};
+            // Action
+            AddScriptDialog.class
+        };
         return classes;
     }
 
